--- a/index.html
+++ b/index.html
@@ -1030,6 +1030,6 @@
             </mask>
          </defs>
       </svg>
-      <script src="/bundle/main.js"></script>
+      <script src="https://github.com/Ekron-Shoo/Gaklaxy-Simple/blob/main/bundle/main.js"></script>
    </body>
 </html>
